logs/el-django-compress.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/compress'...
Listing './lib/python3.5/site-packages/compress/conf'...
Listing './lib/python3.5/site-packages/compress/filters'...
Listing './lib/python3.5/site-packages/compress/filters/csstidy'...
Compiling './lib/python3.5/site-packages/compress/filters/csstidy/__init__.py'...
***   File "./lib/python3.5/site-packages/compress/filters/csstidy/__init__.py", line 31
    print command_output
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/compress/filters/csstidy_python'...
Compiling './lib/python3.5/site-packages/compress/filters/csstidy_python/csstidy.py'...
***   File "./lib/python3.5/site-packages/compress/filters/csstidy_python/csstidy.py", line 635
    print tidy.Output()
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/compress/filters/jsmin'...
Listing './lib/python3.5/site-packages/compress/filters/yui'...
Compiling './lib/python3.5/site-packages/compress/filters/yui/__init__.py'...
***   File "./lib/python3.5/site-packages/compress/filters/yui/__init__.py", line 36
    print err
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/compress/management'...
Listing './lib/python3.5/site-packages/compress/management/commands'...
Compiling './lib/python3.5/site-packages/compress/management/commands/synccompress.py'...
***   File "./lib/python3.5/site-packages/compress/management/commands/synccompress.py", line 26
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/compress/templates'...
Listing './lib/python3.5/site-packages/compress/templates/compress'...
Listing './lib/python3.5/site-packages/compress/templatetags'...
Compiling './lib/python3.5/site-packages/compress/templatetags/compressed.py'...
***   File "./lib/python3.5/site-packages/compress/templatetags/compressed.py", line 110
    raise template.TemplateSyntaxError, '%r requires exactly one argument: the name of a group in the COMPRESS_CSS setting' % token.split_contents()[0]
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/compress/utils.py'...
***   File "./lib/python3.5/site-packages/compress/utils.py", line 108
    print "Removing outdated file %s" % f
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/compress/versioning'...
Listing './lib/python3.5/site-packages/compress/versioning/hash'...
Listing './lib/python3.5/site-packages/compress/versioning/mtime'...
Listing './lib/python3.5/site-packages/el_django_compress-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
